fix: switch text-align from center to left  in .input

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -23,7 +23,7 @@ body {
 input {
     width: 70%;
     font-size: 1.5em;
-    text-align: center;
+    text-align: left;
     padding: 10px;
     margin-bottom: 15px;
     border-radius: 5px;
